4258-unnecessary spacing file changed main.css, 4259-datepicker issue file changed adminController and scheduleController, 4237-dark background when switching role in mindmap

--- a/public/css/css_mindmap/style.css
+++ b/public/css/css_mindmap/style.css
@@ -939,7 +939,7 @@
     stroke-width:0
 }
  .modal-backdrop.in{
-    background-color:transparent
+   /* background-color:transparent; */
 }
  .disableButton{
     cursor: default;
